# building-with-anthropic-api-course

./: .gitignore  001_chunking.ipynb  001_thinking_complete.ipynb  002_embeddings.ipynb  002_images.ipynb  003_caching.ipynb  003_vectordb.ipynb  004_bm25.ipynb  005_hybrid.ipynb  prompt_evals.ipynb  pyproject.toml  request_excersize.ipynb
