[tool.poetry]
name = "building-with-anthropic-api"
version = "0.1.0"
description = "Learning project for building with Anthropic API"
authors = ["yy <yyavorovskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.54.0"
python-dotenv = "^1.0.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
